--- a/MP-MMS.WPF/MP-MMS.WPF.csproj
+++ b/MP-MMS.WPF/MP-MMS.WPF.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7" />
     <Compile Remove="Controls\**" />
     <EmbeddedResource Remove="Controls\**" />
     <None Remove="Controls\**" />
@@ -34,7 +35,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="syncfusion.ui.wpf.net" Version="20.2.0.36" />
+    <PackageReference Include="syncfusion.ui.wpf.net" Version="20.2.0.40" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MP-MMS.Data\MP-MMS.Data.csproj" />
+    <ProjectReference Include="..\MP-MMS.Domain\MP-MMS.Domain\MP-MMS.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
