--- a/MP-MMS.WPF/MP-MMS.WPF.csproj
+++ b/MP-MMS.WPF/MP-MMS.WPF.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <None Remove="Images\account.png" />
+    <None Remove="Images\cancel.png" />
     <None Remove="Images\cog.png" />
     <None Remove="Images\enter.png" />
     <None Remove="Images\home.png" />
@@ -50,6 +51,9 @@
 
   <ItemGroup>
     <Resource Include="Images\account.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\cancel.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\cog.png">
