--- a/MP-MMS.WPF/MP-MMS.WPF.csproj
+++ b/MP-MMS.WPF/MP-MMS.WPF.csproj
@@ -24,6 +24,7 @@
     <None Remove="Images\cog.png" />
     <None Remove="Images\enter.png" />
     <None Remove="Images\home.png" />
+    <None Remove="Images\image-gallery.png" />
     <None Remove="Images\locator.png" />
     <None Remove="Images\PagesIcons\add.png" />
     <None Remove="Images\PagesIcons\delete.png" />
@@ -66,6 +67,9 @@
     </Resource>
     <Resource Include="Images\home.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\image-gallery.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\locator.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
